--- a/views/public/header.ejs
+++ b/views/public/header.ejs
@@ -21,11 +21,11 @@
         <div class="collapse navbar-collapse" id="example-navbar-collapse">
             <ul class="nav navbar-nav">
 
-                <li class="active"><a href="#">管理></a>
+                <li class="active"><a href="#">hhh></a>
                 </li>
-                <li class="active"><a href="#">管理</a>
+                <li class="active"><a href="#">xxxx</a>
                 </li>
-                <li class="active"><a href="#">设置</a>
+                <li class="active"><a href="#">qqqqq</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
